[package]
name = "hub"
version = "0.1.0"
authors = ["Tjeerd Lafebre <tjeerd.lafebre@ing.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.3", features = ["blocking"] }
serde_json = "1.0.64"
serde = { version = "1.0.125", features = ["derive"] }
